--- a/CodableCSV.xcodeproj/xcshareddata/xcschemes/CSV [iOS].xcscheme
+++ b/CodableCSV.xcodeproj/xcshareddata/xcschemes/CSV [iOS].xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8D1806ED2124603B009EB7BF"
-               BuildableName = "CSV__iOS_.framework"
+               BuildableName = "CSV.framework"
                BlueprintName = "CSV [iOS]"
                ReferencedContainer = "container:CodableCSV.xcodeproj">
             </BuildableReference>
@@ -26,14 +26,17 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            parallelizable = "YES"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8D1806F52124603C009EB7BF"
-               BuildableName = "CSV tests [iOS].xctest"
+               BuildableName = "CSVTests.xctest"
                BlueprintName = "CSV tests [iOS]"
                ReferencedContainer = "container:CodableCSV.xcodeproj">
             </BuildableReference>
@@ -43,7 +46,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8D1806ED2124603B009EB7BF"
-            BuildableName = "CSV__iOS_.framework"
+            BuildableName = "CSV.framework"
             BlueprintName = "CSV [iOS]"
             ReferencedContainer = "container:CodableCSV.xcodeproj">
          </BuildableReference>
@@ -65,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8D1806ED2124603B009EB7BF"
-            BuildableName = "CSV__iOS_.framework"
+            BuildableName = "CSV.framework"
             BlueprintName = "CSV [iOS]"
             ReferencedContainer = "container:CodableCSV.xcodeproj">
          </BuildableReference>
@@ -83,7 +86,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "8D1806ED2124603B009EB7BF"
-            BuildableName = "CSV__iOS_.framework"
+            BuildableName = "CSV.framework"
             BlueprintName = "CSV [iOS]"
             ReferencedContainer = "container:CodableCSV.xcodeproj">
          </BuildableReference>
