Improve test readability

--- a/.gitignore
+++ b/.gitignore
@@ -33,13 +33,11 @@ timeline.xctimeline
 playground.xcworkspace
 
 # Swift Package Manager
+.swiftpm
+.build/
 Packages/
 Package.pins
 Package.resolved
-.build/
-
-# Carthage
-Carthage
 
 # Project specific
 Assets/Originals
