--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,5 @@
 name: Tests
-on:
-  push:
-    branches: [ develop ]
-  pull_request:
-    branches: [ develop ]
+on: [ push, pull_request ]
 
 jobs:
   tests_on_macOS:
@@ -11,6 +7,24 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Build
+        run: swift build -v
+      - name: Run tests
+        run: swift test -v
+  
+  tests_on_Ubuntu:
+    name: Tests on Ubuntu
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install Swift Dependencies
+        run: sudo apt-get install clang libicu-dev
+      - name: Download Swift
+        run: wget "https://swift.org/builds/swift-5.1.3-release/ubuntu1804/swift-5.1.3-RELEASE/swift-5.1.3-RELEASE-ubuntu18.04.tar.gz"
+      - name: Install Swift
+        run: |
+          tar xzf swift-5.1.3-RELEASE-ubuntu18.04.tar.gz
+          echo "::add-path::$(pwd)/swift-5.1.3-RELEASE-ubuntu18.04/usr/bin"
       - name: Build
         run: swift build -v
       - name: Run tests
