--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,12 +20,12 @@ jobs:
       - name: Install Swift Dependencies
         run: sudo apt-get install clang libicu-dev
       - name: Download Swift
-        run: wget "https://swift.org/builds/swift-5.1.3-release/ubuntu1804/swift-5.1.3-RELEASE/swift-5.1.3-RELEASE-ubuntu18.04.tar.gz"
+        run: wget "https://swift.org/builds/swift-5.2-release/ubuntu1804/swift-5.2-RELEASE/swift-5.2-RELEASE-ubuntu18.04.tar.gz"
       - name: Install Swift
         run: |
-          tar xzf swift-5.1.3-RELEASE-ubuntu18.04.tar.gz
-          echo "::add-path::$(pwd)/swift-5.1.3-RELEASE-ubuntu18.04/usr/bin"
+          tar xzf swift-5.2-RELEASE-ubuntu18.04.tar.gz
+          echo "::add-path::$(pwd)/swift-5.2-RELEASE-ubuntu18.04/usr/bin"
       - name: Build
         run: swift build -v
       - name: Run tests
-        run: swift test -v
+        run: swift test -v --enable-test-discovery
