--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,9 +8,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: swift build -v
+        run: swift build -v -c release
       - name: Run tests
-        run: swift test --filter CodableCSVTests -v
+        run: swift test -v -c release --filter CodableCSVTests
   
   unittests_on_Ubuntu:
     name: Unit tests on Ubuntu
@@ -20,6 +20,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build
-        run: swift build -v
+        run: swift build -v -c release
       - name: Run tests
-        run: swift test --filter CodableCSVTests --enable-test-discovery -v
+        run: swift test -v -c release --filter CodableCSVTests --enable-test-discovery
